@@ -19,7 +19,7 @@ following names for their contribution to the product.
 * Tim Starling
 
 == Patch Contributors ==
-* 
+* RememberTheDot
 
 == Translators ==
 * Anders Wegge Jakobsen
