@@ -150,6 +150,7 @@ $wgIgnoredMessages = array(
 	'fewestrevisions-summary',
 	'missingfiles-summary',
 	'upload-summary',
+	'pagetitle-view-mainpage',
 );
 
 /** Optional messages, which may be translated only if changed in the target language. */
